# chromiumoxide

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml  shell.nix
.github/workflows/: ci.yml
chromeoxid-pdl/: Cargo.toml  demo.rs
chromeoxid-pdl/src/: lib.rs  parser.rs  pdl.rs
chromeoxid-pdl/src/pdl/: parser.rs
chromeoxid_pdl/: Cargo.toml
chromeoxid_pdl/src/: lib.rs
chromeoxid_pdl/src/pdl/: mod.rs
chromeoxid_types/: Cargo.toml
chromeoxid_types/src/: browser.rs  dom.rs  lib.rs  page.rs  runtime.rs  target.rs
chromiumoxid_cdp/: Cargo.toml  build.rs
chromiumoxid_pdl/: Cargo.toml
chromiumoxid_pdl/src/pdl/: mod.rs  parser.rs
chromiumoxid_tmp/: Cargo.toml  build.rs
chromiumoxid_tmp/src/: lib.rs
chromiumoxid_types/: Cargo.toml
chromiumoxid_types/src/: lib.rs
chromiumoxide_cdp/: Cargo.toml  browser_protocol.pdl  build.rs  js_protocol.pdl
chromiumoxide_cdp/src/: cdp.rs  lib.rs
chromiumoxide_cdp/tests/: generate.rs
chromiumoxide_fetcher/: Cargo.toml
chromiumoxide_fetcher/src/: error.rs  lib.rs  platform.rs  revision.rs
chromiumoxide_fetcher/src/browser/: fetcher.rs  mod.rs  options.rs  revision_info.rs  runtime.rs  zip.rs
chromiumoxide_fetcher/tests/: verify.rs
chromiumoxide_pdl/: Cargo.toml
chromiumoxide_types/: Cargo.toml
chromiumoxide_types/src/: lib.rs
examples/: block-navigation.rs  demo.rs  evaluate.rs  fetcher.rs  gen.rs  httpfuture.rs  iframe-workaround.rs  incognito.rs  interception.rs  js-binding-listener.rs  launch.rs  pdf.rs  screenshot.rs  serde.rs  wiki-tokio.rs  wiki.rs
src/: async_process.rs  browser.rs  cmd.rs  conn.rs  context.rs  detection.rs  element.rs  error.rs  js.rs  keys.rs  layout.rs  lib.rs  listeners.rs  page.rs  session.rs  sketch.rs  subscribe.rs  tab.rs  utils.rs
src/browser/: mod.rs
src/handler/: browser.rs  cmd.rs  commandfuture.rs  domworld.rs  emulation.rs  execution.rs  frame.rs  handler2.rs  http.rs  httpfuture.rs  job.rs  mod.rs  navigationfuture.rs  network.rs  page.rs  session.rs  target.rs  target_message_future.rs  viewport.rs
