[package]
name = "chromiumoxide"
version = "0.3.4"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
description = "Library for interacting with a chrome instance with the chrome devtools protocol"
keywords = ["chrome", "chromedriver", "puppeteer", "automation"]
categories = ["web-programming", "api-bindings", "development-tools::testing"]

[dependencies]
async-tungstenite = "0.16"
serde = { version = "1", features = ["derive"] }
async-std = { version = "1.5", features = ["attributes", "unstable"], optional = true }
futures = "0.3"
chromiumoxide_types = { path = "chromiumoxide_types", version = "0.3" }
chromiumoxide_cdp = { path = "chromiumoxide_cdp", version = "0.3" }
serde_json = "1"
which = "4"
thiserror = "1"
url = "2"
log = "0.4"
base64 = "0.13"
fnv = "1"
futures-timer = "3"
cfg-if = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "fs", "macros"], optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.10"

[dev-dependencies]
quote = "1"
proc-macro2 = "1"
chrono = "0.4.1"
pretty_env_logger = "0.4"

[features]
default = ["async-std-runtime"]
async-std-runtime = ["async-std", "async-tungstenite/async-std-runtime"]
tokio-runtime = ["tokio", "async-tungstenite/tokio-runtime"]

[[example]]
name = "wiki-tokio"
required-features = ["tokio-runtime"]


[workspace]
members = [
    "chromiumoxide_pdl",
    "chromiumoxide_types",
    "chromiumoxide_cdp"
]
