[package]
name = "chromiumoxide"
version = "0.4.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
description = "Library for interacting with a chrome instance with the chrome devtools protocol"
keywords = ["chrome", "chromedriver", "puppeteer", "automation"]
categories = ["web-programming", "api-bindings", "development-tools::testing"]

[dependencies]
async-tungstenite = "0.17"
serde = { version = "1", features = ["derive"] }
async-std = { version = "1.5", features = ["attributes", "unstable"], optional = true }
futures = "0.3"
chromiumoxide_types = { path = "chromiumoxide_types", version = "0.4"}
chromiumoxide_cdp = { path = "chromiumoxide_cdp", version = "0.4"}
chromiumoxide_fetcher = { path = "chromiumoxide_fetcher", version = "0.4", optional = true }
serde_json = "1"
which = "4"
thiserror = "1"
url = "2"
base64 = "0.13"
fnv = "1"
futures-timer = "3"
cfg-if = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "fs", "macros"], optional = true }
tracing = "0.1"
pin-project-lite = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"

[dev-dependencies]
quote = "1"
proc-macro2 = "1"
chrono = "0.4.1"
tracing-subscriber = "0.2"

[features]
default = ["async-std-runtime", "native-tls", "fetcher"]
async-std-runtime = ["async-std", "async-tungstenite/async-std-runtime", "chromiumoxide_fetcher?/async-std-runtime"]
tokio-runtime = ["tokio", "async-tungstenite/tokio-runtime", "chromiumoxide_fetcher?/tokio-runtime"]
rustls-tls = ["chromiumoxide_fetcher?/rustls-tls"]
native-tls = ["chromiumoxide_fetcher?/native-tls"]
fetcher = ["chromiumoxide_fetcher"]

[[example]]
name = "wiki-tokio"
required-features = ["tokio-runtime"]

[[example]]
name = "httpfuture"
required-features = ["tokio-runtime"]

[workspace]
members = [
    "chromiumoxide_pdl",
    "chromiumoxide_types",
    "chromiumoxide_cdp",
    "chromiumoxide_fetcher",
]
