[package]
name = "chromeoxid-pdl"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4"
regex = "1.4"
serde_derive = { version = "1.0", optional = true }

[features]
serde = ["serde_derive"]
