[package]
name = "chromeoxid_pdl"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"
license = "MIT OR APACHE-2.0"
repository = "https://github.com/mattsse/chromeoxid"

[[bin]]
path = "cdproto-gen.rs"
name = "cdproto-gen"

[dependencies]
once_cell = "1.4"
regex = "1.4"
quote = "1.0"
proc-macro2 = "1.0"
structopt = { version = "0.3", optional = true }
heck = "0.3"
serde_json = "1.0"
reqwest = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.21"
chromeoxid_types = { path = "../chromeoxid_types", version = "0.1.0" }
either = "1.6.1"

[features]
gen = []
