[package]
name = "chromeoxid_types"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"
license = "MIT OR APACHE-2.0"
readme = "README.md"
repository = "https://github.com/mattsse/chromeoxid"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
