[package]
name = "chromiumoxid_pdl"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"
license = "MIT OR APACHE-2.0"
description = "Contains a PDL parser and rust generator"
homepage = "https://github.com/mattsse/chromiumoxid"
repository = "https://github.com/mattsse/chromiumoxid"
readme = "../README.md"
include = ["src/**/*", "LICENSE-*"]

[dependencies]
once_cell = "1.4"
regex = "1.4"
quote = "1.0"
proc-macro2 = "1.0"
heck = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chromiumoxid_types = { path = "../chromiumoxid_types", version = "0.1.0" }
either = "1.6.1"