[package]
name = "chromiumoxid_types"
version = "0.1.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2018"
description = "Contains the essential types necessary for using chromiumoxid"
license = "MIT OR APACHE-2.0"
readme = "README.md"
repository = "https://github.com/mattsse/chromiumoxid"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
