[package]
name = "chromiumoxide_cdp"
version = "0.5.2"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2021"
rust-version = "1.70"
description = "Contains all the generated types for chromiumoxide"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
readme = "../README.md"
include = ["src/**/*", "*.pdl", "LICENSE-*"]

[dev-dependencies]
chromiumoxide_pdl = { path = "../chromiumoxide_pdl", version = "0.5"}
ureq = "2.6.2"
tempfile = "3.2.0"

[dependencies]
chromiumoxide_pdl = { path = "../chromiumoxide_pdl", version = "0.5"}
chromiumoxide_types = { path = "../chromiumoxide_types", version = "0.5"}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
