[package]
name = "chromiumoxide_types"
version = "0.5.2"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2021"
description = "Contains the essential types necessary for using chromiumoxide"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
readme = "../README.md"
include = ["src/**/*", "LICENSE-*"]

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
